--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "node src/index.js",
     "build": "tsc",
     "start": "node dist/index.js"
   },
+  "type": "module",
   "dependencies": {
     "@pdfme/common": "^5.4.1",
     "@pdfme/generator": "^5.4.1",
     "@pdfme/schemas": "^5.4.1",
     "@types/node": "^24.0.13",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "piscina": "^5.1.3"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
