--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2022",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "strict": true,
+    "moduleDetection": "force",
     "skipLibCheck": true
   },
   "ts-node": {
